variadics/tests/compile-fail-nightly/var_expr_missing_comma.rs
../compile-fail/var_expr_missing_comma.rs